# BiomarkerAnalyzer

./: README.md  app.py  pyproject.toml
Workflows/: ci.yml
attached_assets/: Pasted--Project-Structure-bioinformatics-biomarker-discovery-data-Folder-fo-1740252973236.txt
src/: ai_analysis.py  data_processing.py  evaluate.py  model.py  visualizations.py
