[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "matplotlib>=3.10.0",
    "numpy>=1.23.5",
    "pandas>=2.1.0",
    "plotly>=6.0.0",
    "protobuf>=4.25.6",
    "scikit-learn==1.3.0",
    "sentencepiece>=0.2.0",
    "streamlit>=1.42.2",
    "tensorflow==2.12.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
